# nova-enclave-capsule

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  install.sh
.github/actions/cargo-zigbuild/: entrypoint.sh
.github/workflows/: ci.yaml  nitro-cli.yaml  release.yaml  static.yml
aws/cloudformation/: infrastructure.yml
build-context/: capsule-shell
capsule-cli/: Cargo.toml  build.rs  test_helios.rs
capsule-cli/src/: aux_api.rs  build.rs  capsule_api.rs  constants.rs  crypto.rs  encryption_key.rs  eth_key.rs  hostfs.rs  hostfs_client.rs  http_util.rs  lib.rs  manifest.rs  nitro_cli.rs  run.rs  run_container.rs  runtime_vsock.rs  utils.rs
capsule-cli/src/integrations/: nova_kms.rs  s3.rs
capsule-cli/src/integrations/nova_kms/: app_wallet.rs
capsule-cli/src/policy/: ip_filter.rs
capsule-cli/src/proxy/: fs_host.rs  mod.rs
dockerfiles/: capsule-runtime-dev.dockerfile  capsule-shell-dev.dockerfile  nitro-cli.dockerfile  sleeve-dev.dockerfile  sleeve-release.dockerfile
docs/: BUILDING_IMAGES.md  architecture.md  base-images.md  building_images_guidance.md  capsule-api-mock.md  capsule-api.md  capsule-architecture.md  capsule-cli.md  capsule-runtime-details.md  capsule-runtime.md  capsule.yaml  ci.md  enclaver-architecture.md  enclaver-cli.md  enclaver.yaml  encryption.md  helios_rpc.md  host_backed_mounts.md  host_backed_mounts_design.md  http_proxy_support_guidance_for_enclave_applications.md  internal_api.md  internal_api_mockup.md  nitro_cli_fuse_image.md  nitro_enclave_clock_drift.md  odyn.md  odyn_details.md  port_handling.md  reproducible-enclaver-build.md  vsock_runtime.md
enclaver/: Cargo.toml  build.rs
enclaver/src/: api.rs  aux_api.rs  build.rs  constants.rs  crypto.rs  encryption_key.rs  eth_key.rs  eth_tx.rs  fs_protocol.rs  hostfs.rs  hostfs_service.rs  http_client.rs  http_util.rs  images.rs  lib.rs  manifest.rs  nitro_cli.rs  nitro_cli_container.rs  nsm.rs  run.rs  run_container.rs  runtime_vsock.rs  tls.rs  utils.rs  vsock.rs
enclaver/src/integrations/: aws_util.rs  mod.rs  nova_kms.rs
enclaver/src/integrations/nova_kms/: app_wallet.rs
enclaver/src/policy/: domain_filter.rs  mod.rs
enclaver/src/proxy/: aws_util.rs  egress_http.rs  ingress.rs  kms.rs  mod.rs  nova_kms.rs  pkcs7.rs  s3.rs
enclaver/src/proxy/nova_kms/: app_wallet.rs
example/: enclaver.yaml  package.json
examples/hn-fetcher/: app.js  capsule.yaml  enclaver.yaml  package.json  readme.md
integration-tests/kms-proxy/: Dockerfile  enclaver.yaml  main.py  pyproject.toml
perf-tests/: README.md  run_enclave.sh
scripts/: build-and-publish-nitro-cli.sh  build-docker-images.sh  capsule-build-smoke-test.sh  deploy-images-to-node.sh  enclaver-build-smoke-test.sh  hostfs-smoke-test.sh  install-docker.sh  parse_attestation.py  publish-docker-images.sh  requirements.txt  validate-nitro-cli-image.sh
webpages/: api-reference.html  app-template.html  architecture.html  capsule-yaml.html  cli-reference.html  clock-drift.html  developer.html  examples.html  getting-started.html  host-setup.html  index.html  minimal-example.html  nitro-setup.html  runtime-model.html  script.js  styles.css  templates.html  why-capsule.html
