[package]
name = "capsule-cli"
version = "1.8.0"
edition = "2024"
rust-version = "1.92"
default-run = "capsule-cli"

[[bin]]
name = "capsule-runtime"
required-features = ["capsule_runtime"]

[[bin]]
required-features = ["run_enclave"]
name = "capsule-shell"

[[bin]]
name = "capsule-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
lazy_static = "1.5"
regex = "1.11"
tokio = { version = "1.47.1", features = ["full"] }
tokio-pipe = "0.2"
tokio-vsock = { version = "0.4", optional = true }
vsock-sys = { package = "vsock", version = "0.3", optional = true }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tar = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
nix = "0.24"
futures = "0.3"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_chacha = "0.3"
futures-util = "0.3"
clap = { version = "4.5.48", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
json = "0.12"
base64 = "0.22.1"
bollard = "0.19"
tempfile = "3.23"
http = "1.3"
http-body-util = "0.1.3"
form_urlencoded = "1.2"
hyper = { version = "1.7", features = ["http1", "server"] }
hyper-util = "0.1.17"
hyper-proxy2 = { version = "0.1.0", features = ["rustls-webpki"], default-features = false }
alloy-primitives = "1.5.2"
uuid = { version = "1.18", features = ["v4"] }
rtnetlink = { version = "0.11", optional = true }
circbuf = "0.2"
async-trait = "0.1"
bytes = "1.10"
ipnetwork = "0.20"
aws-nitro-enclaves-nsm-api = "0.4.0"
aws-types = "1.3.8"
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.6"
aws-smithy-runtime-api = { version = "1.9.0", features = ["http-1x"] }
aws-smithy-types = { version = "1.3.2", features = ["http-body-1-x"] }
aws-sigv4 = "1.3.4"
aws-sdk-s3 = { version = "1.106.0", features = ["behavior-version-latest"] }
rsa = "0.7"
pkcs8 = { version = "0.9", features = ["pem"] }
asn1-rs = "0.7.1"
cbc = { version = "0.1", features = [ "std", "block-padding" ] }
aes = "0.8"
sha2 = "0.10"
ignore-result = "0.2.0"
console-subscriber = { version = "0.1.10", optional = true }
k256 = { version = "0.13.4", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdh"] }
sha3 = "0.10"
rand_core = "0.9.3"
hex = "0.4"
rlp = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
ethabi = "18.0.0"
zeroize = "1.8"
fuser = { version = "0.16.0", default-features = false, optional = true }
fuse_mt = { version = "0.6.3", default-features = false, optional = true }

# Helios light client for trustless Ethereum RPC (optional, only for capsule-runtime)
helios = { git = "https://github.com/sparsity-xyz/helios", rev = "6c306c9b049773d6317521157dbb540895f32e7f", optional = true }

[dev-dependencies]
aws-credential-types = { version = "1.2.6", features = ["hardcoded-credentials"] }

[features]
run_enclave = ["proxy"]
capsule_runtime = ["vsock", "proxy", "dep:helios", "dep:fuser", "dep:fuse_mt"]
proxy = ["vsock"]
vsock = ["dep:tokio-vsock", "dep:rtnetlink", "dep:vsock-sys"]
tracing = ["dep:console-subscriber", "tokio/tracing"]
