[package]
name = "enclaver"
version = "1.0.1"
edition = "2024"
rust-version = "1.86"
default-run = "enclaver"

[[bin]]
name = "odyn"
required-features = ["odyn"]

[[bin]]
required-features = ["run_enclave"]
name = "enclaver-run"

[[bin]]
name = "enclaver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
lazy_static = "1.5"
regex = "1.11"
tokio = { version = "1.47.1", features = ["full"] }
tokio-pipe = "0.2"
tokio-vsock = { version = "0.4", optional = true }
tokio-rustls = { version = "0.26" }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tar = "0.3"
rustls = { version = "0.23.32" }
rustls-pemfile = "2.2.0"
log = "0.4"
pretty_env_logger = "0.5"
nix = "0.24"
futures = "0.3"
rand = { version = "0.8", features = ["std", "std_rng"] }
futures-util = "0.3"
clap = { version = "4.5.48", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
json = "0.12"
base64 = "0.13"
bollard = "0.19"
tempfile = "3.23"
http = "1.3"
http-body-util = "0.1.3"
form_urlencoded = "1.2"
hyper = { version = "1.7", features = ["http1", "server"] }
hyper-util = "0.1.17"
hyper-proxy2 = { version = "0.1.0", features = ["rustls-webpki"], default-features = false }
uuid = { version = "1.18", features = ["v4"] }
rtnetlink = { version = "0.11", optional = true }
circbuf = "0.2"
async-trait = "0.1"
bytes = "1.10"
ipnetwork = "0.20"
aws-nitro-enclaves-nsm-api = "0.4.0"
aws-types = "1.3.8"
aws-config = "1.8"
aws-credential-types = "1.2.6"
aws-smithy-runtime-api = { version = "1.9.0", features = ["http-1x"] }
aws-smithy-types = { version = "1.3.2", features = ["http-body-1-x"] }
aws-sigv4 = "1.3.4"
rsa = "0.7"
pkcs8 = { version = "0.9", features = ["pem"] }
asn1-rs = "0.7.1"
cbc = { version = "0.1", features = [ "std", "block-padding" ] }
aes = "0.8"
sha2 = "0.10"
ignore-result = "0.2.0"
console-subscriber = { version = "0.1.10", optional = true }
k256 = { version = "0.13.4", features = ["ecdsa"] }
sha3 = "0.10"
rand_core = "0.9.3"
hex = "0.4"

[dev-dependencies]
assert2 = "0.3"
tls-listener = { version = "0.11", features = ["rustls-core"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-webpki-roots"] }
aws-credential-types = { version = "1.2.6", features = ["hardcoded-credentials"] }

[features]
run_enclave = ["proxy"]
odyn = ["vsock", "proxy"]
proxy = ["vsock"]
vsock = ["dep:tokio-vsock", "dep:rtnetlink"]
tracing = ["dep:console-subscriber", "tokio/tracing"]
